Make junit5 dependency compileOnly.
This will require users who want to use testfx-junit5 to manually
require the junit-jupiter-api dependency but this makes more sense
than having version conflicts!

Fixes #661.